--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,12 +1,64 @@
-body {
-	background-color: #0f0;
+* {
+	box-sizing: border-box;
+}
 
-	p {
-		color: #fff;
-		
-		&.interesting {
-			color: red;
+body {
+	background-color: #ccc;
+	font-family: Helvetica, Arial, sans-serif;
+
+	.board {
+		background-color: #fff;
+		width: 80%;
+		margin: auto;
+		padding: 10px;
+
+		.story-row {
+			background-color: #00f;
+			padding: 10px;
+			display: inline-block;
+			width: 100%;
+
+			&:after {
+				content: "";
+				display: table;
+				clear: both;
+			}
+
+			table {
+				width: 75%;
+				float: right;
+			}
+			
+			tr {
+				vertical-align: top;
+			}
+
+			td {
+				width: 33.3%;
+			}
 		}
 
+		.story-card {
+			color: #fff;
+			width: 25%;
+			padding: 10px;
+			display: inline-block;
+
+			h2 {
+				font-size: 18px; //should use x-rem mixin
+				font-weight: 400;
+			}
+		}
+		
+
+		.task-card {
+			background-color: #fff;
+			color: #000;
+			padding: 10px;
+			border-radius: 5px;
+			display: block;
+    		margin: 10px;
+		}
 	}
+
 }
