adding modal container

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,9 +2,64 @@
 	box-sizing: border-box;
 }
 
+button {
+	-webkit-appearance: none;
+	appearance: none;
+	border: 0;
+	box-shadow: none;
+	background-color: #F39C12;
+	font-size: 14px;
+	color: #fff;
+	border-radius: 5px;
+	padding: 6px;
+	cursor: pointer;
+
+	&:hover {
+		background-color: #F27935;
+	}
+}
+
 body {
 	background-color: #34495E;
 	font-family: Helvetica, Arial, sans-serif;
+	
+	.underlay,
+	.overlay {
+		visibility: hidden;
+		opacity: 0;
+		-webkit-transition: opacity, 0.4s, linear; 
+		transition: opacity, 0.4s, linear;
+	
+		.overlay-active & {
+			position: fixed;
+			visibility: visible;
+			opacity: 0.6;
+		}
+	}
+	
+	.underlay {
+		.overlay-active & {
+			top: 0;
+		    left: 0;
+		    right: 0;
+		    bottom: 0;
+		    background-color: black;
+		 }
+	}
+
+	.overlay {
+		.overlay-active & {
+		    display: block;
+		    z-index: 9;
+		    width: 40%;
+		    height: 200px;
+		    background-color: white;
+		    margin: auto;
+		    top: 20%;
+		    left: 30%;
+		    opacity: 1;
+		}
+	}
 	
 	.board-title {
 		text-align: center;
