--- a/src/hbs/story-template.hbs
+++ b/src/hbs/story-template.hbs
@@ -14,9 +14,18 @@
 </div>
 
 <table>
-	<tr>
-		<td class="status-todo"></td>
-		<td class="status-inprogress"></td>
-		<td class="status-done"></td>
-	</tr>
+	<thead>
+		<tr>
+			<th>To do</th>
+			<th>In progress</th>
+			<th>Done</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td class="status-todo"></td>
+			<td class="status-inprogress"></td>
+			<td class="status-done"></td>
+		</tr>
+	</tbody>
 </table>
