--- a/src/hbs/edit-story-template.hbs
+++ b/src/hbs/edit-story-template.hbs
@@ -1,4 +1,4 @@
-<h3>Edit story</h3>
+<h3>{{#if priority}}Edit{{else}}New{{/if}} story</h3>
 <form>
 	<label for="priority">Priority</label>
 	<select id="priority" name="priority" selected="{{priority}}">
