--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -169,6 +169,7 @@ body {
 			width: 25%;
 			padding: 10px;
 			display: inline-block;
+			float: left;
 
 			h2 {
 				font-size: 18px; //should use x-rem mixin
