WIP editing tasks

--- a/src/hbs/story-template.hbs
+++ b/src/hbs/story-template.hbs
@@ -1,6 +1,7 @@
 <div class="story-card priortiy-{{priority}}" data-priority="{{priority}}" data-story-id="{{id}}">
 	<button class="story-edit-button">Edit</button>
 	<button class="story-delete-button">Delete</button>
+	<button class="new-task-button">New task</button>
 	<dl>
 		<dt>Priority</dt>
 		<dd>{{priority}}</dd>
