--- a/src/hbs/task-template.hbs
+++ b/src/hbs/task-template.hbs
@@ -1,2 +1,3 @@
-<p>Task</p>
 <p>{{description}}</p>
+<button class="task-edit-button">Edit</button>
+<button class="task-delete-button">Delete</button>
