setting up sass variable files

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,6 @@
-@import 'mixins.scss';
+@import 'helpers/mixins.scss';
+@import 'helpers/colours.scss';
+@import 'helpers/variables.scss';
 
 * {
 	box-sizing: border-box;
