adding constants file - wIP

--- a/src/hbs/story-template.hbs
+++ b/src/hbs/story-template.hbs
@@ -11,11 +11,11 @@
 		<dd>{{modified}}</dd>
 	</dl>
 
-	<h2>As a {{persona}} <br/>I want to {{feature}} <br/>so that I can {{justification}}</h2>
+	<h2 class="story-name">As a {{persona}} I want to {{feature}} so that I can {{justification}}</h2>
 </div>
 
 
-	<table>
+	<table class="tasks">
 		<thead>
 			<tr>
 				<th>To do</th>
