--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,18 +1,22 @@
 @import 'helpers/mixins.scss';
 @import 'helpers/colours.scss';
 @import 'helpers/variables.scss';
+@import 'story.scss';
+@import 'task.scss';
+
 
 * {
 	box-sizing: border-box;
 }
 
 button {
+	@include x-rem(font-size, 14px);
+
 	-webkit-appearance: none;
 	appearance: none;
 	border: 0;
 	box-shadow: none;
 	background-color: #F39C12;
-	font-size: 14px;
 	color: #fff;
 	border-radius: 5px;
 	padding: 6px;
@@ -99,8 +103,9 @@ body {
 				}
 
 				input {
+					@include x-rem(font-size, 14px);
+
 					padding: 10px;
-					font-size: 14px;
 					width: 80%;
 					float: right;
 					-webkit-appearance: none;
@@ -133,71 +138,5 @@ body {
 		width: 80%;
 		margin: auto;
 		padding: 10px;
-
-		.story-row {
-			color: #22313F;
-			background-color: #f5f5f5;
-			padding: 10px;
-			display: inline-block;
-			width: 100%;
-
-			&:after {
-				content: "";
-				display: table;
-				clear: both;
-			}
-
-			&:nth-child(odd) {
-				background-color: #cfe0e2;
-
-				.task-card {
-					background-color: #52B3D9;
-				}
-			}
-
-			table {
-				width: 75%;
-				float: right;
-			}
-			
-			tr {
-				vertical-align: top;
-			}
-
-			td,
-			th {
-				width: 33.3%;
-			}
-
-			th {
-				text-transform: uppercase;
-				font-weight: 400;
-				font-size: 14px;
-				color: #67809F;
-			}
-		}
-
-		.story-card {
-			width: 25%;
-			padding: 10px;
-			display: inline-block;
-			float: left;
-
-			h2 {
-				font-size: 18px; //should use x-rem mixin
-				font-weight: 400;
-			}
-		}
-		
-
-		.task-card {
-			background-color: #59ABE3;
-			color: #fff;
-			padding: 10px;
-			border-radius: 5px;
-			display: block;
-    		margin: 10px;
-		}
 	}
-
 }
