--- a/src/hbs/task-template.hbs
+++ b/src/hbs/task-template.hbs
@@ -1,3 +1,3 @@
-<p>{{description}}</p>
+<p class="task-description">{{description}}</p>
 <button class="task-edit-button">Edit</button>
 <button class="task-delete-button">Delete</button>
