--- a/src/hbs/edit-story-template.hbs
+++ b/src/hbs/edit-story-template.hbs
@@ -2,9 +2,11 @@
 <form>
 	<label for="priority">Priority</label>
 	<select id="priority" name="priority" selected="{{priority}}">
-		<option value="1" {{#if isp1}}selected="selected"{{/if}}>1</option>
-		<option value="2" {{#if isp2}}selected="selected"{{/if}}>2</option>
-		<option value="3" {{#if isp3}}selected="selected"{{/if}}>3</option>
+		{{#select priority}}
+			<option value="1">1</option>
+			<option value="2">2</option>
+			<option value="3">3</option>
+		{{/select}}
 	</select>
 
 	<div class="natural-language-input">
