Adding time formatter function

--- a/src/scss/helpers/colours.scss
+++ b/src/scss/helpers/colours.scss
@@ -1,1 +1,16 @@
-$red: #f00;
+$white-1: #FFFFFF;
+$black-1: #000000;
+$grey-1: #414141;
+$grey-2: #f5f5f5;
+
+$amber-1: #F39C12;
+$amber-2: #F27935;
+
+$aqua-1: #34495E;
+$aqua-2: #336E7B;
+$aqua-3: #C5EFF7;
+$aqua-4: #22313F;
+$aqua-5: #cfe0e2;
+$aqua-6: #52B3D9;
+$aqua-7: #67809F;
+$aqua-8: #59ABE3;
