--- a/src/scss/helpers/variables.scss
+++ b/src/scss/helpers/variables.scss
@@ -1,1 +1,7 @@
 $standard-padding: 15px;
+
+$small-font-size: 12px;
+$standard-font-size: 14px;
+$medium-font-size: 18px;
+
+$standard-font-weight: 400;
